[BE] refactor: 테스트 코드 가독성 및 재사용성 개선 #774